--- a/css/juego.css
+++ b/css/juego.css
@@ -36,8 +36,37 @@ li::before {
 }
 
 .col-60 {
-  background: #E84A5F;
+    width: 600px;
+    height: 600px;
+    /* background-color: rgb(255, 255, 255); */
+    background-color: #E94A5F;
+    padding: 0px;
 
+}
+
+#titulo{
+   letter-spacing: 10px;
+   text-align: center;
+   width: 100%;
+   background-color: #EC6778;
+   color: white;
+   font-size: 25px;
+   font-weight: bold;
+   padding: 5px;
+
+}
+
+#instrucciones h1{
+   color: #EC6778;
+   font-size: 20px;
+   margin-top: 20px;
+}
+
+#juego {
+   text-align: center;
+   margin: 0px;
+   padding: 0px;
+   border: 0px;
 }
 
 #flecha{
@@ -56,4 +85,23 @@ li::before {
 @keyframes fadein {
   from { opacity: 0; }
   to   { opacity: 1; }
+}
+
+.piezas{
+   //border: 2px solid rgb(119, 249, 50);
+   width:33%;
+   height:33%;
+   float: left;
+   margin: 0px;
+   padding: 0px;
+   border: 0px;
+}
+
+.piezas img{
+   max-width: 100%;
+   display: block;
+}
+#_9{
+   width: 33%;
+   height: 33%;
 }
